k8s/app/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-order-service
  namespace: fiap-oficina
  labels:
    app: service-order-service
    version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-order-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: service-order-service
        version: "1.0.0"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - service-order-service
                topologyKey: kubernetes.io/hostname

      containers:
        - name: service-order-service
          image: service-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12

      terminationGracePeriodSeconds: 30
